fixed spacing in header

--- a/employees.css
+++ b/employees.css
@@ -13,7 +13,8 @@ h2 {
     width: 250px;
     opacity: .8;
     margin-right: auto;
-    margin-left: auto; 
+    margin-left: auto;
+    margin-top: 0px; 
 }
 
 .info {
